create a working frequency of note dictionary

--- a/test_modules/Notes_By_Frequency_In_Corpus_v2.ipynb
+++ b/test_modules/Notes_By_Frequency_In_Corpus_v2.ipynb
@@ -233,7 +233,7 @@
    },
    "outputs": [],
    "source": [
-    "def countDegreeOccurrence( melody_line , dictionary ,  ):\n",
+    "def countDegreeOccurrence( melody_line , dictionary  ):\n",
     "    \n",
     "    pitchList = melody_line.pitches\n",
     "    shortPitchList = [str(p) for p in pitchList] #or p.name if want all in  one octave\n",
