create working frequency of note dictionary

--- a/test_modules/Notes_By_Frequency_In_Corpus_v3.ipynb
+++ b/test_modules/Notes_By_Frequency_In_Corpus_v3.ipynb
@@ -558,8 +558,17 @@
     "* Understand why expandRepeats and flattened melody don't work\n",
     "* Use the dictionary as input into something else!!! \n",
     "* Figure out how bins work\n",
-    "* Can we do anythin"
+    "* Can we do anything about octaves without rewriting using something like Librosa?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
